@@ -1,0 +1,16 @@
+# times are represented in minutes
+# 10080 = 1 week
+# 43200 = 1 month
+
+# smallest number of time in between cycles
+cycleTime=30
+
+# do not delete releases younger than
+archiveAfter=10080
+
+# AutoFreeSpace will try to keep each slave above this number
+keepFree=1000MB
+
+# do not delete releases under these sections
+#excluded.section.1=REQUESTS
+#excluded.section.2=STAFF
